cmake_minimum_required(VERSION 2.4)

PROJECT(Test)

FIND_PACKAGE(Qt REQUIRED)
IF(QT_USE_FILE)
  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR} ${QT_INCLUDE_DIR})
  INCLUDE(${QT_USE_FILE})
ELSE(QT_USE_FILE)
   MESSAGE(FATAL_ERROR, "QT not found. Please set QT_DIR.")
ENDIF(QT_USE_FILE)

ADD_DEFINITIONS(-DQT_GUI_LIBS -DQT_CORE_LIB -DQT3_SUPPORT)
ADD_EXECUTABLE(Test main.cxx)
TARGET_LINK_LIBRARIES(Test ${QT_LIBRARIES})


